<resources>
    <string name="app_name">Material Design</string>
    <string name="splash_text">Material Design</string>


    <!--login screens-->
    <string name="login_user_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_user_name_error_msg">Please enter your username</string>
    <string name="login_password_error_msg">Please enter the password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search...</string>

    <!--Menu and Sub Menu for the navigation drawer-->
    <string name="menu_home">Home</string>
    <string name="menu_fab">Floating Action Button </string>
    <string name="menu_snack_bar">Snack Bar</string>
    <string name="menu_recycler">Recycler View</string>
    <string name="menu_collapsing_tb">Collapsing Toolbar Layout</string>
    <string name="menu_tab_layout">Tab Layout</string>
    <string name="menu_palette">Palette Library</string>
    <string name="menu_percent">Percent Library</string>
    <string name="sub_menu_title">Sub Menu</string>
    <string name="sub_menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="toolbar">Toolbar</string>
    <string name="floating_action_bar">You clicked FloatingActionButton</string>
    <string name="snackbar_action">Show Snackbar</string>
    <string name="text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel </string>
    <string name="collapsable_toolbar_title">Collapsable Toolbar</string>
</resources>
