<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.android.materialdesign.ui.TextInputLayoutActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_user_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_user_name_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_name"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleDrawable="@drawable/ic_login_password_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_default_grey">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button"
        android:textColor="@color/color_default_white"
        android:textSize="16sp" />
</LinearLayout>

